# PSiLMN

./: .gitignore  README.md  pyproject.toml
docs/: index.html  styles.css
experiment/: README.md  analysis.py  analysis_bias.py  biased_analysis.py  generate_networks.py  global_analysis.py  kill.sh  main.py  main_bias.py  network_analysis.py  nice_networks.py  rapid_analysis.py  run.sh
experiment/data/: scale_free_network_1000_nodes.graphml  scale_free_network_100_nodes.graphml  scale_free_network_10_nodes.graphml
experiment/data/fully_connected/: 0.json
experiment/data/fully_connected_network/: 10.graphml  100.graphml  25.graphml  5.graphml  5.json  50.graphml  50.json
experiment/data/fully_disconnected_network/: 10.graphml  100.graphml  1000.graphml  25.json  5.graphml  5.json  50.graphml  50.json
experiment/data/random/: 0.json  1.graphml  2.graphml  2.json
experiment/data/random_network/: 10.graphml  10.json  100.graphml  100.json  1000.graphml  25.graphml  25.json  50.graphml  50.json
experiment/data/scale_free/: 2.json
experiment/data/scale_free_network/: 0.json  1.json  10.graphml  100.graphml  1000.graphml  1000.json  2.graphml  25.graphml  25.json  5.graphml  5.json  50.graphml  50.json
experiment/data/watts_strogatz_network/: 10.graphml  100.graphml  100.json  1000.graphml  1000.json  (+6 more)
lib/: agent.py  analyse.py  bias.py  graph_analysis.py  memory.py  network.py  parse.py  visualize.py
tests/: README.md  test_agent.py  test_openai_connection.py  test_response_parsing.py
visualise/: package-lock.json  package.json
visualise/src/: App.js
(+19 files in other folders)
