[tool.poetry]
name = "multiagentnetworksimulation"
version = "0.1.0"
description = ""
authors = ["ciaran-regan-ie <ciaranregan123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.8"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.7.4"
pytest = "^8.0.1"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
faker = "^23.2.1"
datasets = "^2.17.1"
tdqm = "^0.0.1"
langchain-openai = "^0.0.8"
imageio = "^2.34.0"
lorem-text = "^2.1"
aiofiles = "^23.2.1"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
